Add input values, border colours and on change call 1 incr 2 decr actions

--- a/src/app/task/task-child/task-child.component.html
+++ b/src/app/task/task-child/task-child.component.html
@@ -1,1 +1,5 @@
-RADI test test
+
+<div [ngClass]="(varA | async) < 0 ? 'lower' : 'greater'">{{ varA | async }}</div>
+
+<div [ngClass]="(varB | async) < 0 ? 'lower' : 'greater'">{{ varB | async }}</div>
+
