--- a/src/app/task/task-child/task-child.component.scss
+++ b/src/app/task/task-child/task-child.component.scss
@@ -1,7 +1,14 @@
 .greater {
-  border: 1px solid blue;
+  border: 2px solid blue;
+  color: blue;
 }
 
 .lower {
-  border: 1px solid red;
+  border: 2px solid red;
+  color: red;
+}
+
+.equal {
+  border: 2px solid black;
+  color: black;
 }
